# resume-agent

./: .gitignore  README.md  WARP.md  pyproject.toml
src/resume_agent/: __init__.py  cli.py  generator.py  netfetch.py  openai_resume.py
templates/: resume.md.j2
tests/: test_generator.py
